Atualizar altura do footer e adicionar novo favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <title>Lalu - Incorporadora e Administradora de Imóveis | Curitiba - PR</title>
     <meta name="description" content="Incorporadora com 20 anos de experiência no PR e SC. Empreendimentos residenciais e comerciais, locação e venda de imóveis. Soluções completas em desenvolvimento imobiliário." />
     <meta name="author" content="Lalu Incorporadora" />
